Refactor Java stream examples in extra.java, intermediate.java, and terminal.java; add new functionality in pyq_3.java for character analysis and word categorization.